@@ -1,3 +1,9 @@
+2009-09-16  Bob Halley  <halley@dnspython.org>
+
+	* dns/entropy.py: The entropy module needs locking in order to be
+	  used safely in a multithreaded environment.  Thanks to Beda Kosata
+	  for reporting the problem.
+
 2009-07-27  Bob Halley  <halley@dnspython.org>
 
 	* dns/query.py (xfr): The socket was not set to nonblocking mode.
